Fix notification on small screen

--- a/public/style.css
+++ b/public/style.css
@@ -1673,3 +1673,9 @@ dropdown input:focus + label + items {
 		display: none;
 	}
 }
+@media screen and (max-width: 250px) {
+	.notification {
+		min-width: 0;
+		max-width: 98%;
+	}
+}
